# centiTMF-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: audit.py  compute.py  documents.py  etmf.py  simulate.py  studies.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  models.py.bak  session.py
backend/app/rules/: rule_engine.py  seed_rules.json
backend/app/schemas/: common.py
backend/app/services/: artifact_classifier.py  audit_copilot.py  compliance_engine.py  deviation_intelligence.py  document_ingestion.py  embeddings.py  inspection_simulation.py  llm.py  s3.py
backend/app/tests/: test_artifact_classifier.py  test_risk_scoring.py  test_rule_engine.py
backend/scripts/: seed.py
docs/: PRD.md  api-overview.md  architecture.md  demo-walkthrough.md  rule-engine.md
docs/images/: README.md
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AuditCopilot.tsx  ETMFDashboard.tsx  FlagTable.tsx  NavBar.tsx  RiskBadge.tsx  RiskScoreGauge.tsx  StatCard.tsx
frontend/app/simulate/[studyId]/: page.tsx
frontend/app/studies/[studyId]/: page.tsx
frontend/app/upload/: page.tsx
frontend/lib/: api.ts  utils.ts
seed_docs/: delegation_log_site004_outdated.txt  deviation_log_site012.txt  fda_1572_site021_outdated.txt  investigator_cv_site021.txt  irb_approval_site004.txt  monitoring_report_site004.txt  protocol_abc001.txt
(+1 files in other folders)
