[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centitmf-backend"
version = "1.0.0"
description = "centiTMF Inspection Readiness AI Agent — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "boto3>=1.34.144",
    "pypdf>=4.3.1",
    "openai>=1.37.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.4",
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
